--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ rust-version = "1.88.0"
 keywords = ["math", "equality", "approximate", "float", "comparison"]
 license = "MIT OR Apache-2.0"
 
+[workspace]
+members = ["approx_eq-derive"]
+
 [workspace.lints.rust]
 missing_docs = "warn"
 rust_2018_idioms = "warn"
@@ -34,6 +37,7 @@ uninlined_format_args = "warn"
 unwrap_used = "warn"
 
 [dependencies]
+approx_eq-derive = { version = "0.1.0", path = "approx_eq-derive" }
 rustc-hash = { version = "2.1.1", optional = true }
 smallvec = { version = "1.13.2", features = ["union"] }
 
