--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["math", "equality", "approximate", "float", "comparison"]
 license = "MIT OR Apache-2.0"
 
 [workspace]
-members = ["approx_eq-derive"]
+members = ["derive"]
 
 [workspace.lints.rust]
 missing_docs = "warn"
@@ -37,7 +37,7 @@ uninlined_format_args = "warn"
 unwrap_used = "warn"
 
 [dependencies]
-approx_eq-derive = { version = "0.1.0", path = "approx_eq-derive" }
+approx_collections_derive = { version = "0.1.0", path = "derive", optional = true }
 rustc-hash = { version = "2.1.1", optional = true }
 smallvec = { version = "1.13.2", features = ["union"] }
 
@@ -46,4 +46,5 @@ proptest = "1.7.0"
 proptest-macro = "0.2.0"
 
 [features]
-default = ["rustc-hash"]
+default = ["rustc-hash", "derive"]
+derive = ["dep:approx_collections_derive"]
