--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -1,10 +1,10 @@
-[lib]
-proc-macro = true
-
 [package]
-name = "approx_eq-derive"
+name = "approx_collections_derive"
 version = "0.1.0"
 edition = "2024"
+
+[lib]
+proc-macro = true
 
 [dependencies]
 quote = "1.0.43"
