--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ rust-version = "1.88.0"
 keywords = ["math", "equality", "approximate", "float", "comparison"]
 license = "MIT OR Apache-2.0"
 
+[workspace]
+members = ["derive"]
+
 [workspace.lints.rust]
 missing_docs = "warn"
 rust_2018_idioms = "warn"
@@ -34,6 +37,7 @@ uninlined_format_args = "warn"
 unwrap_used = "warn"
 
 [dependencies]
+approx_collections_derive = { version = "0.1.0", path = "derive", optional = true }
 rustc-hash = { version = "2.1.1", optional = true }
 smallvec = { version = "1.13.2", features = ["union"] }
 
@@ -42,4 +46,5 @@ proptest = "1.7.0"
 proptest-macro = "0.2.0"
 
 [features]
-default = ["rustc-hash"]
+default = ["rustc-hash", "derive"]
+derive = ["dep:approx_collections_derive"]
