Move macro tests to an integration test
Also use full path for derive macros so imports are not needed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ rust-version = "1.88.0"
 keywords = ["math", "equality", "approximate", "float", "comparison"]
 categories = ["data-structures", "mathematics"]
 license = "MIT OR Apache-2.0"
+autotests = true
 
 [workspace]
 members = ["derive"]
